Fixed bug where card options are not showing on touch only (no hover) devices

--- a/src/components/result_card_container/result_card/_ResultCard.scss
+++ b/src/components/result_card_container/result_card/_ResultCard.scss
@@ -173,9 +173,6 @@
 (primarily touch devices)----- */
 
 @media (hover: none) {
-  :root {
-    --card__link-buttons-visibilty: visible;
-  }
   .card__thumb-and-links-container {
     position: relative;
     input.toggle-links-for-no-hover {
